--- a/04-analytics-engineering/models/staging/sources.yml
+++ b/04-analytics-engineering/models/staging/sources.yml
@@ -3,6 +3,8 @@ version: 2
 sources:
   - name: staging
     database: dezoomcamp-409909
-    schema: ny_taxi
+    schema: trips_data_all
 
     tables:
+      - name: green_tripdata
+      - name: yellow_tripdata
