Complete the homework

--- a/04-analytics-engineering/models/staging/sources.yml
+++ b/04-analytics-engineering/models/staging/sources.yml
@@ -8,6 +8,7 @@ sources:
     tables:
       - name: green_tripdata
       - name: yellow_tripdata
+      - name: fhv_tripdata
 models:
   - name: stg_yellow_tripdata
     description: ""
@@ -202,3 +203,36 @@ models:
       - name: payment_type_description
         data_type: string
         description: ""
+
+  - name: stg_fhv_tripdata
+    description: ""
+    columns:
+      - name: dispatching_base_num
+        data_type: string
+        description: ""
+
+      - name: pickup_datetime
+        data_type: timestamp
+        description: ""
+
+      - name: dropoff_datetime
+        data_type: timestamp
+        description: ""
+
+      - name: pickup_locationid
+        data_type: int64
+        description: ""
+      
+      - name: dropoff_locationid
+        data_type: int64
+        description: ""
+      
+      - name: sr_flag
+        data_type: int64
+        description: ""
+      
+      - name: affiliated_base_numer
+        data_type: string
+        description: ""
+      
+      
